fixing stretched image

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -371,6 +371,7 @@ nav {
             width: 100% !important;
             height: auto;
             padding: 0 0 1rem 0;
+            object-fit: cover;
           }
         }
 
